<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/вход"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="270dp"
        android:paddingBottom="8dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/exit" />
    <TextView
        android:id="@+id/exit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:textColor="@color/white"
        android:paddingHorizontal="130dp"
        android:layout_marginStart="40dp"
        android:text="@string/exit"
        />
    <EditText
        android:id="@+id/box3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radios"
        app:layout_constraintTop_toBottomOf="@id/exit2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="19dp"
        android:layout_marginVertical="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/box4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radios"
        app:layout_constraintTop_toBottomOf="@id/box3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="19dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:hint="@string/pasword"
        android:importantForAutofill="no"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/radios2"
        android:text="@string/up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box4" />

    <TextView
        android:id="@+id/parol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="18dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="18dp"
        android:text="@string/onclick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/parol"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>